syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

message CommonStateSignalChatCall {
	string chatId = 1;
	string liveId = 2;
	int64 callTimestampMs = 3;
}
